fix: layout Issues

--- a/src/styles.css
+++ b/src/styles.css
@@ -618,6 +618,17 @@ input[type="checkbox"] {
   transition: opacity 0.6s ease;
 }
 
+#statisticsBorderGridNotes {
+  display: flex;
+  flex-wrap: wrap;
+  grid-row: 2/3;
+  grid-column: 2/3;
+  height: 320px;
+  justify-self: center;
+  align-content: center;
+  transition: opacity 0.6s ease;
+}
+
 #statisticField {
   display: flex;
   flex-wrap: wrap;
@@ -630,6 +641,10 @@ input[type="checkbox"] {
 }
 
 #statisticsBorder.disappear {
+  opacity: 0;
+}
+
+#statisticsBorderGridNotes.disappear {
   opacity: 0;
 }
 
@@ -712,7 +727,7 @@ input[type="checkbox"] {
   bottom: 55px;
 }
 
-#statisticsBorder section {
+#statisticsBorderGridNotes section {
   display: grid;
   row-gap: 15px;
   font-size: 15px;
@@ -975,7 +990,7 @@ input[type="checkbox"] {
     transform: scale(2.2);
   }
 
-  #statisticsBorder {
+  #statisticsBorderGridNotes {
     grid-column: 1/4;
   }
 
